@@ -118,6 +118,13 @@ declare global {
     }
 
     /**
+     * A track piece coordinate and type within the game.
+     */
+    interface CarTrackLocation extends CoordsXYZD {
+        trackType: number;
+    }
+
+    /**
      * A rectangular area specified using two coordinates.
      */
     interface MapRange {
@@ -2558,7 +2565,7 @@ declare global {
         /**
          * The location and direction of where the car is on the track.
          */
-        trackLocation: CoordsXYZD;
+        trackLocation: CarTrackLocation;
 
         /**
          * The current g-forces of this car.
