@@ -5,6 +5,7 @@
 - Feature: [#22172] [Plugin] Expose ride satisfaction ratings to the plugin API.
 - Feature: [#22184] [Plugin] Expose staff statistics to the plugin API.
 - Feature: [#22213] [Plugin] Allow plugins to focus on textboxes in custom windows.
+- Feature: [#22272] [Plugin] Expose ride vehicle's current track type via car trackLocation.
 - Feature: [#22301] Loading save games or scenarios now indicates loading progress.
 - Feature: [OpenMusic#54] Added Progressive ride music style (feat. Approaching Nirvana).
 - Improved: [#22361] Add additional colour preset for the Observation Tower.
